<resources>
    <string name="app_name">Wordle</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="placeholder">(placeholder)</string>

    <!-- First fragment -->
    <string name="start">Start</string>
    <string name="score">Score</string>
    <string name="quit">Quit</string>

    <!-- keyboard -->
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="enter">Enter</string>
    <string name="backspace">back</string>
    <string name="empty" />

    <!-- End game -->
    <string name="new_game">New Game</string>
    <string name="stat">Stat</string>
    <string name="win">You Win!</string>
    <string name="lose">You Lose!</string>

    <!-- Stat -->
    <string name="games_played">Games played</string>
    <string name="winrate">Winrate</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

</resources>