<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="393dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="393dp"
        android:layout_height="480dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etv00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/etv01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etv10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etv20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etv30"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv31"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv32"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv34"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etv40"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv41"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv42"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv43"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv44"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/etv50"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv51"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv52"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv53"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etv54"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/empty"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="179dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/end_game_tv"
            android:layout_width="393dp"
            android:layout_height="80dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/win"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/stat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stat" />

            <TextView
                android:id="@+id/empty0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty" />

            <Button
                android:id="@+id/new_game_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_game" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>